--- a/ThietKeWeb/Views/Home/Recruit.cshtml
+++ b/ThietKeWeb/Views/Home/Recruit.cshtml
@@ -1,8 +1,223 @@
 ﻿
 @{
-    ViewBag.Title = "Recruit";
-    Layout = "~/Views/Shared/MasterLayout.cshtml";
+    ViewBag.Title = "Tuyển Dụng";
+    Layout = null;
 }
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Tuyển Dụng</title>
 
-<link href="~/Views/Shared/MasterLayout.cshtml"rel="stylesheet" type="text/css"/>
+        <style>
+            body{
+                margin:0;
+            }
+                        /*header*/
+            .header {
+                background-color: #4B7864;
+                display:flex;
+                justify-content: center;
+                height: 70px;
+                align-items: center;
+            }
+            h3 {
+                margin: 0;
+                font-size: 25px;     
+            }
+                            /*-----------------------content--------------------------*/
+            .content {
+                place-items: center;
+                display: flex;
+                flex-direction: column;
+                min-height: 100vh;
+                
+               
+            }
+            .KhungTuyenDung {
+                background-color: #4B7864;
+                width: 60%;
+                padding: 2%;
+                margin-bottom:10px;
+                border-radius: 16px; 
+                justify-items:center;
+                
+            }
+            h4 {
+                color: #02542D;
+                font-size:23px;
+                text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+            }
+            .content img{
+                width:70%;
+                padding:5px;
+            }
+            p {
+                margin: 0;
+                padding-bottom:15px;
+                font-weight: bold;
+                color: white;
+                
+            }
+          
+/*bang tuyen dung*/
+            table {
+                color: white;
+                font-size:25px;
+                
+ 
+            }
+            table td, table th {
+                    line-height: 1.8; 
+                    
+            }
+            table a{
+                text-decoration:none;
+                font-size:27px;
+                color:#F2CFF1;
+                font-weight:bold;
+            }
+/*link biểu mẫu*/
+            .KhungTuyenDung span{
+                 align-items:center;
+                 background-color:#c31818;
+                 padding:10px;
+                 border-radius:12px;
+            }
+            .KhungTuyenDung span a{
+                font-size:20px;
+                text-decoration:none;
+                padding:15px;
+            }
+                /*----------------------------footer---------------------------*/
+                .footer {
+                    background-color: #6c6565;
+                    color: white;
+                    font-size: 18px;
+                    clear: both;
+                    display: flex;
+                    justify-content: center;
+                }
+
+            p {
+                margin-top: 20px;
+                margin-left: 10px;
+                margin-right: 30px;
+            }
+
+            .fb-icon-image {
+                width: 35px;
+                height: 35px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            .ins-icon-image {
+                width: 35px;
+                height: 35px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            .tw-icon-image {
+                width: 35px;
+                height: 35px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            .phone-icon-image {
+                width: 35px;
+                height: 35px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            .email-icon-image {
+                width: 35px;
+                height: 35px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+        </style>
+    
+    </head>
+    <body>
+                                @*header*@
+       <div class="header">
+           <h3 style="color:white">BẠN ĐANG TÌM KIẾM MỘT CÔNG VIỆC ?</h3>
+       </div>
+                                @*Content*@
+    <div class="content">
+        <h4>HÃY THAM GIA NGAY CÙNG CHÚNG TÔI</h4>
+
+@*hình ảnh tuyển dụng*@
+
+        <img src="~/Content/images/tuyển dụng.jpg" />
+
+        
+
+        @*khung tuyển dụng*@
+        <div class="KhungTuyenDung">
+
+            <p>TÌM KIẾM CÔNG VIỆC</p>
+
+            @*bang tuyen dung*@
+
+            <table width=80%>
+                <tr style="font-weight:bold">
+                    <td style="width:80%" height="10%"> VỊ TRÍ</td>
+                    <td> CHI TIẾT</td>
+                </tr>
+                <tr>
+                    <td> Nhân viên bán thời gian </td>
+                    <td><a href="~/Home/RecruitDetail"> Tìm hiểu  </a></td>
+                </tr>
+                <tr>
+                    <td> Nhân viên toàn thời gian </td>
+                    <td><a href="~/Home/RecruitDetail"> Tìm hiểu </a></td>
+                </tr>
+                <tr>
+                    <td> Quản lí cửa hàng </td>
+                    <td><a href="~/Home/RecruitDetail"> Tìm hiểu </a></td>
+               
+                </tr>
+                <tr>
+                    <td> Marketing </td>
+                    <td><a href="#"> Tìm hiểu </a></td>
+                </tr>
+                
+            </table>
+            <div class"LinkDangKi">
+                <span><a href="https://forms.gle/S9kCjdFTREPzuk1YA" style="color:white">ĐĂNG KÍ TUYỂN DỤNG </a></span>
+            </div>
+        </div>
+
+    </div>
+                                    @*footer*@
+    <div class="footer">
+        <div>
+            <img src="~/Content/images/fb-icon.png" class="fb-icon-image" />
+            <img src="~/Content/images/ins-icon.png" class="ins-icon-image" />
+            <img src="~/Content/images/tw-icon.png" class="tw-icon-image" />
+        </div>
+        <div>
+            <p>&copy;  2018 Baron Coffee.  Powered by Group Baron</p>
+        </div>
+        <div>
+            <img src="~/Content/images/phone-icon.png" class="phone-icon-image" />
+        </div>
+        <div>
+            <p>0245269466</p>
+        </div>
+        <div>
+            <img src="~/Content/images/email-icon.png" class="email-icon-image" />
+        </div>
+        <div>
+            <p>customerservice@Baroncoffee.com.vn</p>
+        </div>
+    </div>
+    </body>
+</html>
 
